# univalency

./: .gitignore  README.md  stack.yaml  univalency.cabal
app/: Main.hs
src/: Univalency.hs
